--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
     <head>
         <title>Paulo Henrique Silvente Pereira</title>
-        <!-- IMPORTAR FONTES E ICONES -->
+        <!-- FONTES E ICONES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&family=Lexend:wght@100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=chat,newsstand,person,work_history" />
-        <!-- IMPORTAR CSS -->
+        <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+        <!-- CSS -->
         <link rel="stylesheet" href="style.css">
-        <!-- IMPORTAR JAVASCRIPT -->
+        <!-- JAVASCRIPT -->
         <script src="script.js"></script>
     </head>
     <body>
@@ -18,31 +17,27 @@
         <!-- CABEÇALHO -->
         <div id="cabecalho">
             <div class="nome">
-                <p>Olá, eu sou o<br><b>Paulo Henrique Silvente Pereira</b>.</p>
+                <p><b>Paulo Henrique Silvente Pereira</b></p>
             </div>
-            <!-- MENU DE OPÇÕES -->
+            <!-- OPÇÕES -->
             <div class="menu">
                 <div id="botaoSobre" class="opcaoMenu" onclick="mostrar('sobre', 'botaoSobre');" selecionado="selecionado">
-                    <span class="material-symbols-outlined">person</span>
                     <p>Sobre Mim</p>
                 </div>
                 <div id="botaoFormacao" class="opcaoMenu" onclick="mostrar('formacao', 'botaoFormacao')">
-                    <span class="material-symbols-outlined">work_history</span>
                     <p>Experiência</p>
                 </div>
                 <div id="botaoPortfolio" class="opcaoMenu" onclick="mostrar('portfolio', 'botaoPortfolio')">
-                    <span class="material-symbols-outlined">newsstand</span>
                     <p>Portfolio</p>
                 </div>
                 <div id="botaoContato" class="opcaoMenu" onclick="mostrar('contato', 'botaoContato')">
-                    <span class="material-symbols-outlined">chat</span>
                     <p>Contato</p>
                 </div>
             </div>  
         </div>
 
 
-        <!-- SOBRE MIM -->
+        <!-- SOBRE -->
          <div id="sobre" class="conteudo">
             <p class="titulo_secao">Sobre Mim</p><br>
             <p>Nascido em Presidente Prudente, SP.</p>
@@ -53,9 +48,9 @@
          </div>
 
 
-        <!-- FORMAÇÃO & EXPERIÊNCIA -->
+        <!-- EXP -->
         <div id="formacao" class="conteudo" hidden>
-            <p class="titulo_secao">Formação & Experiência</p><br>
+            <p class="titulo_secao">Experiência</p><br>
             <p><b>Sprite Artist</b>, Elderan Online</p>
             <p class="observacao"> 2023 - Atual</p>
             <ul>
@@ -69,7 +64,7 @@
         <!-- PORTFOLIO -->
         <div id="portfolio" class="conteudo" hidden>
             <p class="titulo_secao">Portfolio</p><br>
-            GitHub: <a href="https://www.artstation.com/phsilvente">https://www.artstation.com/phsilvente</a>
+            Artstation: <a href="https://www.artstation.com/phsilvente">https://www.artstation.com/phsilvente</a>
             <br><br>
         </div>
 
